Preserving inline style of the replaced block element for FormatBlock('execCommand')

Preserving inline style of the replaced block element for FormatBlock('execCommand')
https://bugs.webkit.org/show_bug.cgi?id=47054

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=163137

With 'FormatBlock', the newly inserted block-style element would not possess
any of the inline style properties of the original block element containing the
current selection.
Thus, as the associated bug describes, we need to either add a style attribute
to the newly added block-style element or, add another style span with the
inline style of the replaced block element.

This patch takes the approach of adding the inline style to the new block-style
element itself.

* Source/WebCore/editing/FormatBlockCommand.cpp:
(FormatBlockCommand::formatRange): Add logic to preserve inline style
* LayoutTests/editing/execCommand/format-block-with-block.html: Add Test Case
* LayoutTests/editing/execCommand/format-block-with-block-expected.txt: Add Test Case Expectation